crates/swc_ts_fast_strip/tests/errors/assertion-precedence-as.ts
1 + 1 as number / 2;

1 + 1 as const / 2;
